prevent stuff in code tag from wrapping on hyphen

--- a/css/scss/screen.scss
+++ b/css/scss/screen.scss
@@ -90,6 +90,7 @@ p {
     border: 1px solid $lightGray;
     border-radius: 3px;
     padding: 2px 4px;
+    white-space: nowrap;
   }
 }
 
